# dl-light-etl

./: .gitignore  Makefile  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
dl_light_etl/: __init__.py  actions.py  base.py  errors.py  etl_constructs.py  extractors.py  jobs.py  loaders.py  transformers.py  types.py
dl_light_etl/plain_text/: __init__.py  base.py  filesystem.py
dl_light_etl/side_effects/: abstract.py  data_logging.py  timing.py  validation.py
dl_light_etl/spark/: __init__.py  base.py  framework.py
dl_light_etl/utils/: functional.py  spark_util.py
tests/: conftest.py  test_actions.py  test_base.py  test_extractors.py  test_job.py  test_loaders.py  test_transformers.py
tests/plain_text/: test_base.py
tests/side_effects/: test_data_logging.py  test_timing.py  test_validation.py
tests/spark/: test_base.py  test_framework.py
