[project]
name = "dl_light_etl"
version = "0.3.5"
authors = [
  { name="Frank Ypma", email="frank.ypma@ypma-data.nl" },
]
description = "ETL Framework for AWS datalake"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fhcypma/dl-light-etl"

[tool.setuptools]
packages = ["dl_light_etl", "dl_light_etl.plain_text", "dl_light_etl.spark", "dl_light_etl.utils"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"